@@ -1,5 +1,12 @@
 2007-01-08  Ross Burton  <ross@burtonini.com>
 
+	* src/actions.[ch]:
+	* src/parser.c:
+	Add println, str, hex actions, and expand print (thanks David
+	Decotigny).
+
+2007-01-08  Ross Burton  <ross@burtonini.com>
+
 	* src/matchers.[ch]:
 	* src/parser.c:
 	Add func_window_xid (thanks David Decotigny)
